<resources>
    <string name="app_name">Validator</string>
    <string name="todo">company logo</string>
    <string name="todos">the logo</string>
    <string name="password">Password</string>
    <string name="logins">Login</string>
    <string name="username">Username</string>
    <string name="validate">Validate</string>
    <string name="rescan">Scan</string>
    <string name="issue">Issue</string>
    <string name="slider_qty">1</string>
    <string name="results">RESULTS</string>
    <string name="amount">Amount</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="quantity">Qty</string>
    <string name="selection">Selection</string>
    <string name="bill">WW3333388</string>
    <string name="bilref">BilRef :</string>
    <string name="slider">Slider</string>
    <string name="slider_unit_cost">1350</string>
    <string name="slider_amount">1350</string>
    <string name="non_slider">Non Slider</string>
    <string name="non_slider_quantity">1</string>
    <string name="non_slider_unit_cost">300</string>
    <string name="non_slider_amount">300</string>
    <string name="total">Total</string>
    <string name="total_quantity">1</string>
    <string name="total_unit_cost">1350</string>
    <string name="total_amount">1650</string>
    <string name="error">This card has been used.</string>
</resources>
