<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="342dp"
        android:layout_height="347dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/results"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:text="@string/bilref"
            android:textColor="@color/blue"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="70dp"
            android:layout_marginTop="90dp"
            android:text="0000000"
            android:textColor="@color/blue"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"

            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/yellow">

                <TableRow android:background="@color/blue">

                    <TextView
                        android:layout_marginStart="18dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/selection"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:gravity="center"
                        android:text="@string/quantity"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/unit_cost"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/amount"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_marginStart="18dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/slider"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/slider_qty"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/slider_uc"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/slider_unit_cost"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/slider_amount"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_marginStart="18dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/non_slider"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/n_slider_qty"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/n_slider_uc"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/non_slider_unit_cost"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/n_slider_amount"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_marginStart="18dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/total"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/amount_total"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:layout_marginEnd="33dp"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="346dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/buttonScan"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:background="@color/blue"
            android:text="@string/rescan"
            android:textColor="#fff" />

        <Button
            android:id="@+id/buttonIssue"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@color/blue"
            android:text="@string/issue" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>